--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -18,10 +18,15 @@
 </div>
 <div class = "row">
     <div class= "col-md-2">
+        <div id = "info">
+        </div>
     </div>
     <div class = "col-md-8 d-flex justify-content-center">
         <div id = "answers">
         </div>
+    </div>
+    <div class= "col-md-2">
+        <button id="continue"> Continue</button>
     </div>
 </div>
 
