finished quiz front end

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,7 +35,7 @@
       <div class="navbar-nav">
         <a class="nav-link" href="/">Home</a>
         <a class="nav-link" href="/learning">Learning</a>
-        <a class="nav-link" href="/quiz/1">Quiz</a>
+        <a class="nav-link" href="/quiz/start">Quiz</a>
       </div>
     </div>
   </div>
