Added homepage layout

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -7,9 +7,18 @@
 <script>
 </script>
 
-<div class = "container">
-    <div class = "homepage">
-        UI Project
+<div class= "container">
+    <div class="row">
+        <div class="col-6">
+            <div class="hero-container">
+                <h1>Meditation</h1>
+                <p>Mindfulness training can be beneficial to your mental well being</p>
+                <button>Start Now</button>
+            </div>
+        </div>
+        <div class="col-6">
+            <img>
+        </div>
     </div>
 </div>
 
