Added css to homepage

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -13,7 +13,7 @@
             <div class="hero-container">
                 <h1>Meditation</h1>
                 <p>Mindfulness training can be beneficial to your mental well being</p>
-                <button>Start Now</button>
+                <button id="startBtn">Start Now</button>
             </div>
         </div>
         <div class="col-6">
