Learning git, I think this should work now

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,7 +34,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link" href="/">Home</a>
-        <a class="nav-link" href="/learning">Learning</a>
+        <a class="nav-link" href="/learning/start">Learning</a>
         <a class="nav-link" href="/quiz/start">Quiz</a>
       </div>
     </div>
