--- a/templates/learning.html
+++ b/templates/learning.html
@@ -30,6 +30,9 @@
             
         </div>
     </div>
+    <div class= "col-md-2">
+        <button id="continue"> Continue</button>
+    </div>
 </div>
 
 
