--- a/templates/quiz_end.html
+++ b/templates/quiz_end.html
@@ -2,13 +2,15 @@
 
 {% block content %}
 
-<script type="text/javascript" src="{{ url_for('static', filename = 'quiz.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename = 'quiz.js') }}">
+    total_score =  {{total_score|tojson}} 
+</script>
 
 <div class = "row">
     <div class= "col-md-2">
     </div>
     <div class = "col-md-8 d-flex justify-content-center">
-        You have finished the quiz.
+        You have finished the quiz. And you have a score of {{total_score}}
     </div>
 </div>
 
