--- a/templates/quiz_start.html
+++ b/templates/quiz_start.html
@@ -16,6 +16,8 @@
     <div class = "col-md-8 d-flex justify-content-center">
         <button id="startq"> Start Quiz</button>
     </div>
+    <div> Please note that you will only earn a point if you select the right answer on the first try.</div>
+    <div> The next question would only show up if you select the right answer </div>
 </div>
 
 
