--- a/static/main.css
+++ b/static/main.css
@@ -13,11 +13,12 @@
 # Typography
 --------------------------------------------------------------*/
 
+
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
 #content {
-    margin-top: 150px;
+    margin-top: 50px;
 }
 
 button {
@@ -26,13 +27,29 @@ button {
     border: none;
 }
 
+img {
+    width: 100%;
+    height: 100%;
+}
+
 
 /*--------------------------------------------------------------
 # Home Page
 --------------------------------------------------------------*/
-#startBtn {
+#startBtn, .continue-btn {
     background-color: var(--primary-blue);
     color: white;
     padding: 10px 20px 10px 20px;
     border-radius: 60px;
+}
+
+/*--------------------------------------------------------------
+# Learning
+--------------------------------------------------------------*/
+.module-photo {
+    height: 500px;
+}
+
+.continue-container {
+    margin-top: 50px;
 }
