--- a/static/main.css
+++ b/static/main.css
@@ -36,6 +36,10 @@ img {
 /*--------------------------------------------------------------
 # Home Page
 --------------------------------------------------------------*/
+#homePage {
+    height: 70vh;
+}
+
 #startBtn, .continue-btn {
     background-color: var(--primary-blue);
     color: white;
