--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,8 +5,13 @@
 <script type="text/javascript" src="{{ url_for('static', filename = 'homepage.js') }}"></script>
     
 <script>
+    $(document).ready(function(){
+        $("#startBtn").click(function(){
+            window.location.href = "/learning/1"
+        });
+    })
 </script>
-<div class= "container">
+<div class="container d-flex align-items-center" id="homePage">
     <div class="row">
         <div class="col-6">
             <div class="hero-container">
@@ -16,7 +21,7 @@
             </div>
         </div>
         <div class="col-6">
-            <img>
+            <img src="https://images.unsplash.com/photo-1508672019048-805c876b67e2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1819&q=80">
         </div>
     </div>
 </div>
