--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -13,8 +13,8 @@
     <div class= "col-md-2">
     </div>
     <div class = "col-md-8 d-flex justify-content-center">
-        <span id= "question_num"> {{question_num}}</span>
-        <span id = "question">
+        <span id="question_num"> {{question_num}}</span>
+        <span id ="question">
             .{{question.question}}
         </span>
     </div>
@@ -29,7 +29,7 @@
         </div>
     </div>
     <div class= "col-md-1">
-        <button id="continue"> Continue</button>
+        <button id="continue" class="continue-btn"> Continue</button>
     </div>
     <div class= "col-md-1">
         <span> This is your current score: </span><span id = "total_score">{{total_score}}/3 </span>
