--- a/templates/quiz_start.html
+++ b/templates/quiz_start.html
@@ -10,11 +10,11 @@
     })
 </script>
 
-<div class = "row">
+<div class="row">
     <div class= "col-md-2">
     </div>
     <div class = "col-md-8 d-flex justify-content-center">
-        <button id="startq"> Start Quiz</button>
+        <button id="startq" class="continue-btn"> Start Quiz</button>
     </div>
     <div> Please note that you will only earn a point if you select the right answer on the first try.</div>
     <div> The next question would only show up if you select the right answer </div>
