--- a/templates/learning_end.html
+++ b/templates/learning_end.html
@@ -5,10 +5,9 @@
 <script type="text/javascript" src="{{ url_for('static', filename = 'learning.js') }}"></script>
 
 <div class = "row">
-    <div class= "col-md-2">
-    </div>
-    <div class = "col-md-8 d-flex justify-content-center">
-        You have finished learning.
+    <div class="col-12 d-flex flex-column align-items-center">
+        <h1>Congratulations you have finished learning</h1>
+        <button class="continue-btn" id="takeQuizBtn">Take the Quiz</button>
     </div>
 </div>
 
