--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -13,9 +13,9 @@
     <div class= "col-md-2">
     </div>
     <div class = "col-md-8 d-flex justify-content-center">
-        <span id="question_num"> {{question_num}}</span>
+        <span id="question_num">{{question_num}}</span>
         <span id ="question">
-            .{{question.question}}
+            .{{question.question}} {
         </span>
     </div>
 </div>
