--- a/static/main.css
+++ b/static/main.css
@@ -1,6 +1,8 @@
 :root {
     --primary-blue: #4B8090;
     --secondary-brown: #C09471;
+    --green: rgba(10, 82, 26, 0.6);
+    --red: rgba(252, 1, 1, 0.3);
 }
 
 * {
@@ -35,10 +37,9 @@ img {
 /*--------------------------------------------------------------
 # Navigation
 --------------------------------------------------------------*/
-nav {
-    background-color: var(--primary-blue);
+.navbar {
+    padding: 10px 30px 10px 30px;
 }
-
 nav * {
     color: white;
 }
@@ -83,8 +84,8 @@ nav * {
 --------------------------------------------------------------*/
 .answer {
     margin: 5px 0px 5px 0px;
-    padding: 10px;
-    width: 200px;
+    padding: 10px 15px 10px 15px;
+    width: 100%;
     border: 1px solid var(--primary-blue);
     color: var(--primary-blue);
     border-radius: 8px;
@@ -93,4 +94,25 @@ nav * {
 .answer:hover {
     background-color: var(--primary-blue);
     color: white;
+}
+
+#info {
+    width: 200px;
+    height: 300px;
+}
+
+.correct-info, .incorrect-info {
+    width: 100%;
+    height: 100%; 
+    color: white;
+    padding: 30px;
+    border-radius: 8px;
+}
+
+.correct-info {
+    background-color: var(--green);
+}
+
+.incorrect-info {
+    background-color: var(--red);
 }
