--- a/templates/learning.html
+++ b/templates/learning.html
@@ -9,7 +9,7 @@
 
 <div class="row">
     <div class="col-12 d-flex flex-column align-items-center">
-        <h1>{{module.title}}</h1>
+        <h1 class="module-title">{{module.title}}</h1>
         <div class="module-photo">
             <img src="{{module.image}}">
         </div>
