--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -7,12 +7,22 @@
     let question = {{question|tojson}}
     let total_score = {{total_score|tojson}}
     let question_num = {{question_num|tojson}}
+    let total_questions = {{total_questions|tojson}}
 </script>
-<div class="row">
+<div class="row quiz-metrics">
+    <div class="col-6 d-flex justify-content-center">
+        <div>
+            <p id="questionNum"><span>Question </span>{{question_num}}<span>/{{total_questions}}</span></p>
+        </div>
+    </div>
+    <div class="col-6 d-flex justify-content-center">
+        <p>Your Score: <span id ="totalScore">{{total_score}}</span></p>
+    </div>
+</div>
+<div class="row quiz-title">
     <div class="col-12 d-flex justify-content-center">
         <div class="question-container d-flex">
-            <h2 id="questionNum">{{question_num}}</h2>
-            <h2>. {{question.question}}</h2>
+            <h2>{{question.question}}</h2>
         </div>
     </div>
 </div>
@@ -25,10 +35,10 @@
         <div id="answers">
         </div>
     </div>
-    <div class="col-2">
-        <div>
-            <p>Your Score: <span id ="totalScore">{{total_score}}/3</span></p>
-        </div>
+</div>
+<div class="row">
+    <div class="col-12 d-flex justify-content-end">
+        <button id="continue" class="continue-btn"> Continue</button>
     </div>
 </div>
 
