--- a/templates/quiz_end.html
+++ b/templates/quiz_end.html
@@ -6,15 +6,13 @@
     total_score =  {{total_score|tojson}} 
 </script>
 
-<div class = "row">
+<div class="row">
     <div class= "col-md-2">
     </div>
-    <div class = "col-md-8 d-flex justify-content-center">
+    <div class = "col-md-8">
         You have finished the quiz. And you have a score of {{total_score}}
     </div>
 </div>
-
-
 {% endblock %}
 
 
