Added a restart quiz button at the end of the quiz

--- a/templates/quiz_end.html
+++ b/templates/quiz_end.html
@@ -14,6 +14,14 @@
     </div>
 </div>
 
+<div class = "row"> 
+    <a href="/quiz/start">
+        <button class="continue-btn"> 
+           Restart Quiz
+        </button>
+    </a>
+</div>
+
 
 {% endblock %}
 
