--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -7,15 +7,17 @@
     let question = {{question|tojson}}
     let total_score = {{total_score|tojson}}
     let question_num = {{question_num|tojson}}
+    let total_num = {{total_num|tojson}}
+    console.log(question)
 </script>
 
 <div class = "row">
     <div class= "col-md-2">
     </div>
     <div class = "col-md-8 d-flex justify-content-center">
-        <span id="question_num">{{question_num}}</span>
+        <span id="question_num" hidden>{{question_num}}</span>
         <span id ="question">
-            .{{question.question}} {
+            {{question.question}} 
         </span>
     </div>
 </div>
@@ -32,7 +34,7 @@
         <button id="continue" class="continue-btn"> Continue</button>
     </div>
     <div class= "col-md-1">
-        <span> This is your current score: </span><span id = "total_score">{{total_score}}/3 </span>
+        <span> This is your current score: </span><span id = "total_score">{{total_score}}</span><span>/{{total_num}}</span>
     </div>
 </div>
 
