Added backend for tracking the user's report

--- a/templates/report.html
+++ b/templates/report.html
@@ -65,7 +65,7 @@
     <div class="col-md-10">
     </div>
     <div class= "col-md-2">
-        <button class="continue-btn" id="next">Next Lesson</button>
+        <a id ="next_lession" href="/learning/{{ module.next}}" ><button class="continue-btn" id="next">Next Lesson</button></a>
     </div>
 </div>
 
