--- a/templates/report.html
+++ b/templates/report.html
@@ -20,10 +20,10 @@
     <div class= "col-md-2">
     </div>
     <div class = "col-md-8 d-flex justify-content-center">
-        <div class="slidecontainer">
+        <div class="slidecontainer" >
             <label class="float-left">Agitated</label>
             <label class="float-right">Relaxed</label>
-            <input type="range" min="0" max="50" value="25" class="slider">
+            <input type="range" min="0" max="50" value="25" class="slider" id = "feeling_scale">
             <span class="float-center"><label class="float-center">The same</label></span>
         </div>
     </div>
