Edited navbar to include learning modules

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,10 +25,13 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/learning/1">Letting Go</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/learning/1">Learning</a>
+          <a class="nav-link" href="/learning/2">Box Breathing</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/learning/3">Blue Sky</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/quiz/start">Quiz</a>
