Fixe contineu button in quiz

--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -31,12 +31,19 @@
         </div>
     </div>
     <div class= "col-md-1">
-        <button id="continue" class="continue-btn"> Continue</button>
-    </div>
-    <div class= "col-md-1">
-        <span> This is your current score: </span><span id = "total_score">{{total_score}}</span><span>/{{total_num}}</span>
+        <span> Current Score: </span><span id = "total_score">{{total_score}}</span><span>/{{total_num}}</span>
     </div>
 </div>
+<div class = "row">
+    <div class= "col-md-2">
+    </div>
+    <div class = "col-md-8 d-flex justify-content-center">
+    </div>
+    <div class= "col-md-2">
+        <button id="continue" class="continue-btn"> Continue</button>
+    </div>
+</div>
+
 
 
 {% endblock %}
