--- a/templates/learning.html
+++ b/templates/learning.html
@@ -10,6 +10,7 @@
 <div class="row">
     <div class="col-12 d-flex flex-column align-items-center">
         <h1 class="module-title">{{module.title}}</h1>
+        <p class="module-text">{{module.text}}</p>
         <div class="module-photo">
             <img src="{{module.image}}">
         </div>
