--- a/templates/quiz_start.html
+++ b/templates/quiz_start.html
@@ -13,14 +13,11 @@
 <div class="row">
     <div class= "col-md-2">
     </div>
-    <div class = "col-md-8 d-flex justify-content-center">
-        <div class="info">
-            <div> Please note that you will only earn a point if you select the right answer on the first try.</div>
-            <div> The next question will only show up when you select the right answer.</div>
-        </div>
+    <div class = "col-md-8 d-flex flex-column align-items-center">
+        <div> Please note that you will only earn a point if you select the right answer on the first try.</div>
+        <div> The next question will only show up when you select the right answer.</div>
     </div>
 </div>
-
 <div class="row">
     <div class= "col-md-2">
     </div>
